--- a/style.css
+++ b/style.css
@@ -2,4 +2,15 @@ html {
   font-family: sans-serif;
 }
 
-/* Your CSS below here */
+.cool-box {
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  font-size: 24px;
+  background: linear-gradient(45deg, #ff0000, #0000ff);
+  border: 5px solid #000000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
